# mdv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
crates/mddiff-core/src/: blame.rs  git.rs  lib.rs
crates/mdv-core/: Cargo.toml
crates/mdv-core/src/: diff.rs  doc.rs  fs.rs  git.rs  lib.rs  pack.rs
crates/mdv-tui/: Cargo.toml
crates/mdv-tui/src/: app.rs  main.rs  picker.rs
crates/mdv-tui/src/views/: diff.rs  mod.rs
docs/: decisions.md  design.md  issues.md  refactor-audit.md  roadmap.md  tooling-research.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs
src-tauri/src/commands/: clipboard.rs  diff.rs  fs.rs  git.rs  mdv.rs  mod.rs  watcher.rs
src/lib/: errors.ts  export.ts  types.ts
src/lib/components/: FindBar.svelte  HistoryBanner.svelte  LargeFileWarning.svelte  MdvExportDialog.svelte  ModeBar.svelte  SettingsDialog.svelte
src/lib/i18n/: en.ts  ja.ts
src/lib/ipc/: clipboard.ts  fs.ts  git.ts  mdv.ts
src/lib/stores/: doc.svelte.ts  settings.svelte.ts
src/lib/views/: DiffView.svelte  LivePreviewView.svelte  PreviewView.svelte  SourceView.svelte  WysiwygView.svelte  cm-editor.ts  cm-spellcheck-mask.ts  cm-syntax.ts  cm-theme.ts  find-cm.svelte.ts  find-dom.ts  find.svelte.ts  image-paste.ts  link-click-cm.ts  link-click.ts  livepreview.ts  markdown-render.ts  modifier-cursor.svelte.ts  scroll-tracker.ts
src/lib/views/diff/: BlameView.svelte  FullDiffView.svelte  HighlightView.svelte  SideBySideView.svelte
src/routes/: +page.svelte
