[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/mdv-core",
    "crates/mdv-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ebi-oishii"]
license = "MIT"
repository = "https://github.com/ebi-oishii/mdv"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
git2 = { version = "0.19", default-features = false }
anyhow = "1"
thiserror = "2"
