[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/mddiff-core",
    "crates/mddiff-tui",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["ebi-oishii"]
license = "MIT"
repository = "https://github.com/ebi-oishii/mddiff"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
git2 = { version = "0.19", default-features = false }
anyhow = "1"
thiserror = "2"
base64 = "0.22"
sha2 = "0.10"
zstd = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
