[package]
name = "mdv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lightweight cross-platform Markdown viewer and editor"

[lib]
name = "mdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mdv-core = { path = "../crates/mdv-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
notify-debouncer-mini = { version = "0.6", default-features = false, features = ["serde"] }
