[package]
name = "mddiff"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lightweight cross-platform Markdown viewer and editor"

[lib]
name = "mddiff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mddiff-core = { path = "../crates/mddiff-core" }
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
notify-debouncer-mini = { version = "0.6", default-features = false, features = ["serde"] }
# PNG encoding for clipboard image paste. Lightweight format-specific encoder;
# kept separate from a full `image` crate dependency until we need WebP/JPEG.
png = "0.18"
