[package]
name = "mdv-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI for mdv."

[[bin]]
name = "mdv-tui"
path = "src/main.rs"

[dependencies]
mdv-core = { path = "../mdv-core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
